--- a/home.html
+++ b/home.html
@@ -8,23 +8,17 @@
 <body>
     <header>
         <div>
-            <h1>
-                HOLA
-            </h1>
+            <h1>HOLA</h1>
         </div>
     </header>
     <main>
         <div>
-            <h2>
-                Mi pagina
-            </h2>
+            <h2>Mi pagina</h2>
         </div>
     </main>
     <footer>
         <div>
-            <h3>
-                Mis redes
-            </h3>
+            <h3>Mis redes</h3>
         </div>
     </footer>
 </body>
