--- a/home.html
+++ b/home.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <header>
-        <div>
+        <div id="nombre">
             <h1>HOLA</h1>
         </div>
     </header>
     <main>
-        <div>
+        <div id="centro">
             <h2>Mi pagina</h2>
         </div>
     </main>
     <footer>
-        <div>
+        <div id="pie">
             <h3>Mis redes</h3>
         </div>
     </footer>
